<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="En esta sección encontrará buenas prácticas para el desarrollo de software"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_1"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_2"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_3"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_4"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_5"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_6"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_7"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_8"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_9"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_10"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_11"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_12"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_13"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_14"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buena_practica_15"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>