<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/inicioFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.escom.gestorpro.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.escom.gestorpro.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.escom.gestorpro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.escom.gestorpro.fragments.InicioFragment"
        android:label="Inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/responsablesFragment"
        android:name="com.escom.gestorpro.fragments.ResponsablesFragment"
        android:label="Miembros del equipo"
        tools:layout="@layout/fragment_responsables" />
    <fragment
        android:id="@+id/lineaTiempoFragment"
        android:name="com.escom.gestorpro.fragments.LineaTiempoFragment"
        android:label="Tareas"
        tools:layout="@layout/fragment_linea_tiempo" />
    <fragment
        android:id="@+id/estrategiasFragment"
        android:name="com.escom.gestorpro.fragments.EstrategiasFragment"
        android:label="Estrategias"
        tools:layout="@layout/fragment_estrategias" />
    <fragment
        android:id="@+id/proyectosFragment"
        android:name="com.escom.gestorpro.fragments.ProyectosFragment"
        android:label="Proyectos"
        tools:layout="@layout/fragment_proyectos" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.escom.gestorpro.fragments.ProfileFragment"
        android:label="Mi perfil"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.escom.gestorpro.fragments.ChatsFragment"
        android:label="Mis chats"
        tools:layout="@layout/fragment_chats" />
    <fragment
        android:id="@+id/riesgosFragment"
        android:name="com.escom.gestorpro.fragments.RiesgosFragment"
        android:label="Riesgos"
        tools:layout="@layout/fragment_riesgos" />
</navigation>